--- a/public/config.json
+++ b/public/config.json
@@ -1,4 +1,5 @@
 {
   "api": "https://api.xxhzm.cn/",
+  "token": "f31e27f21c06289beb406730cdc7d8bb",
   "logo": "https://www.xxhzm.cn/wp-content/uploads/2022/01/title.png"
 }
