--- a/public/config.json
+++ b/public/config.json
@@ -1,6 +1,6 @@
 {
   "api": "https://api.xxhzm.cn/",
-  "token": "849447042b3f0ccce0169fba19d92af5",
+  "token": "",
   "logo": "https://www.xxhzm.cn/usr/uploads/2022/01/title.png",
   "icp": "鲁ICP备 2022002709号",
   "gongan": "鲁公网安备 37048102005079号"
